
== Changes since the 2.3.0 release

=== Language changes

* Multiple assignment in conditional expression is now allowed.
  [Feature #10617]

* Refinements is enabled at method by Symbol#to_proc.  [Feature #9451]

* Refinements is enabled with Kernel#send and BasicObject#__send__.
  [Feature #11476]

* Rescue modifier now applicable to method arguments.
  [Feature #12686]

=== Core classes updates (outstanding ones only)

* Array

  * Array#concat [Feature #12333]
    Now takes multiple arguments.

  * Array#max and Array#min.  [Feature #12172]
    This may cause a tiny incompatibility: if you redefine
    Enumerable#max and call max to an Array, your redefinition will be
    now ignored.  You should also redefine Array#max.

  * Array#pack [Feature #12754]
    Now takes optional argument `buffer:' to reuse already allocated buffer.

  * Array#sum  [Feature #12217]
    This is different from Enumerable#sum in that Array#sum doesn't depend on
    the definition of each method.

* Comparable

  * Comparable#clamp.  [Feature #10594]

* Dir

  * Dir.empty?.  [Feature #10121]

* Enumerable

  * Enumerable#chunk called without a block now return an Enumerator
    [Feature #2172]
  * Enumerable#sum  [Feature #12217]
  * Enumerable#uniq  [Feature #11090]

* Enumerator::Lazy

  * Enumerator::Lazy#chunk_while  [GH-1186]
  * Enumerator::Lazy#uniq  [Feature #11090]

* File

  * File.empty?.  [Feature #9969]

* Float

  * Float#ceil, Float#floor, and Float#truncate now take an optional
    digits, as well as Float#round.  [Feature #12245]

  * Float#round now takes an optional keyword argument, half option, and
    the default behavior is round-up.  [Bug #12548] [Bug #12958]
    half option can be one of :even, :up, and :down.  [Feature #12953]

* Hash

  * Hash#compact and Hash#compact!  [Feature #11818]
  * Hash#transform_values and Hash#transform_values!  [Feature #12512]

* Integer

  * Fixnum and Bignum are unified into Integer  [Feature #12005]
